...
                    }
                }
            }
        } footer: {
            HStack {
                Spacer()
                MuiButton(label: "Close", variant: .ghost) { dismissed?() }
            }
        } dismissed: {
            dismissed?()
        }
    }

...
